webrtc: Various `Since` markers are missing now
The following discussion from !2241 (merged) should be addressed:
-
@slomo started a discussion: This should've stayed on the now opaque typedef, and also in various other places.
Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
The following discussion from !2241 (merged) should be addressed:
This should've stayed on the now opaque typedef, and also in various other places.